modification on cards

--- a/market.html
+++ b/market.html
@@ -87,125 +87,125 @@
 
       </section>
 
-      <ul class="list-unstyled  row justify-content-center align-items-center gap-5 ">
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
+      <ul class="list-unstyled row justify-content-center align-items-center gap-5 ">
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
           </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
-          </div>
-        </li>
-        <li class="boxs row col-12 col-lg-3 ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
-          </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
           </div>
         </li>
-        <li class="boxs row col-12  col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
           </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
-          </div>
-        </li>
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
-          </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
           </div>
         </li>
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
           </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
-          </div>
-        </li>
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
-          </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
           </div>
         </li>
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
           </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
-          </div>
-        </li>
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
-          </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
           </div>
         </li>
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
           </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
-          </div>
-        </li>
-        <li class="boxs row col-12  col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
-          </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
           </div>
         </li>
-        <li class="boxs row col-12 col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
           </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
           </div>
         </li>
-        <li class="boxs row col-12  col-lg-3  ">
-          <div class="m-0">
-            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="ms-auto me-auto w-100">
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
           </div>
-          <div class="row justify-content-around align-items-center">
-            <a class="col-2" href=""><i class="fa-brands fa-ethereum col-1"></i></a>
-            <a class="col-4 main-btn "  href="#">Buy</a>
-            <a class="col-2" href=""> <i class="bi bi-heart col-1"></i></a>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
+          </div>
+        </li>
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
+          </div>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
+          </div>
+        </li>
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
+          </div>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
+          </div>
+        </li>
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
+          </div>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
+          </div>
+        </li>
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
+          </div>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
+          </div>
+        </li>
+        <li class="boxs d-flex flex-column col-12 col-md-6 col-lg-3">
+          <div class="w-100 d-flex justify-content-center">
+            <img src="img/img_caroussel/luffy_car.png" alt="nft" class="w-75">
+          </div>
+          <div class="d-flex justify-content-between align-items-centerm w-100 px-2 gap-3 mb-2">
+            <a class="d-flex justify-content-start align-items-center" href=""><i class="fa-brands fa-ethereum icon-center"></i></a>
+            <a class="main-btn flex-grow-1"  href="#">Add to cart</a>
+            <a class="d-flex justify-content-end align-items-center" href=""> <i class="bi bi-heart icon-center"></i></a>
           </div>
         </li>
       </ul>
